fixed Tools section and aligned items using grid

--- a/styles.css
+++ b/styles.css
@@ -273,4 +273,64 @@ body {
 }
 .proj1 > * {
   flex: 1;
+} 
+
+/*===============
+Tools Section
+===============*/
+.Tools-container {
+  width: 18.75em;
+  height: 53em;
+  background-color: white;
+  border-radius: 24px;
+  text-align: center;
+} 
+
+.languages-bar,
+.design-bar,
+.tools-bar
+{
+  text-align: center;
+  background-color: #E7F0EC;
+  border-radius: 24px;
+  display: grid;
+  grid-template-columns:1fr 1fr ;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bar {
+  color: white;
+  background-color: black;
+  border-radius: 20px;
+  text-align: center;
+  width: 6em;
+  margin: auto;
+  margin-top: 1em;
+  padding-bottom: .2em;
+ /* font-weight: 100;
+  border-radius: 10px;
+  width: 5em;
+  text-align: center;*/
+  
+}
+
+.languages-bar {
+  width: 11.5em;
+  height: 17em;
+} 
+
+.design-bar {
+  width:11.5em;
+  height:10em;
+}
+
+.tools-bar {
+  width: 11em;
+  height: 12em;
+} 
+
+.tool-logo {
+  place-self: center;
 }
